argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectmanager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: projectmanager
  template:
    metadata:
      labels:
        app: projectmanager
    spec:
      containers:
        - name: projectmanager
          image: ronn4/projectmanager:3b73e17aea29d296b7b5c9d6a9c264c86d06a045
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: projectmanager
spec:
  type: NodePort
  selector:
    app: projectmanager
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
