argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projectmanager-ingress
spec:
  rules:
    - host: ron.project.devops
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projectmanager
                port:
                  number: 80
